--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "~1.3.8",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "nprogress": "^0.2.0",
+    "timers-browserify": "^2.0.12",
     "vue": "^2.6.14",
+    "vue-ls": "^3.2.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/polyfill": "^7.2.5",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -23,6 +30,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "less": "^3.8.1",
+    "less-loader": "^6.0.0",
+    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
