--- a/package.json
+++ b/package.json
@@ -8,16 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "ant-design-vue": "~1.3.8",
     "axios": "^0.21.1",
+    "bootstrap": "^4.1.1",
+    "bootstrap-table": "^1.22.1",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.8.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "nprogress": "^0.2.0",
+    "tableexport.jquery.plugin": "^1.10.20",
     "timers-browserify": "^2.0.12",
     "vue": "^2.6.14",
     "vue-ls": "^3.2.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "summernote": "^0.8.10",
+     "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
