--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "summernote": "^0.8.10",
-     "popper.js": "^1.16.1"
+     "popper.js": "^1.16.1",
+     "vue-cropper": "0.4.4",
+     "viser-vue": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
